# kb-engine

./: pyproject.toml
src/kb_engine/: __init__.py  cli.py
src/kb_engine/api/: dependencies.py  main.py
src/kb_engine/api/routers/: indexing.py  retrieval.py
src/kb_engine/config/: settings.py
src/kb_engine/core/: __init__.py
src/kb_engine/core/models/: __init__.py  document.py  repository.py  search.py
src/kb_engine/embedding/: config.py  factory.py
src/kb_engine/embedding/providers/: local.py
src/kb_engine/extraction/: config.py
src/kb_engine/git/: __init__.py  scanner.py  url_resolver.py
src/kb_engine/pipelines/: __init__.py
src/kb_engine/pipelines/indexation/: pipeline.py
src/kb_engine/pipelines/inference/: __init__.py  pipeline.py
src/kb_engine/repositories/: factory.py
src/kb_engine/repositories/graph/: sqlite.py
src/kb_engine/repositories/traceability/: sqlite.py
src/kb_engine/repositories/vector/: chroma.py
src/kb_engine/services/: __init__.py  indexing.py  retrieval.py
src/kb_engine/utils/: markdown.py  tokenization.py
tests/: conftest.py  factories.py
tests/unit/core/: test_models.py
tests/unit/extraction/: test_extraction.py
tests/unit/git/: test_scanner.py  test_url_resolver.py
tests/unit/repositories/: test_sqlite_graph.py  test_sqlite_traceability.py
tests/unit/utils/: test_markdown.py
